modify list